# playground-k8s

./: README.md
myecho/: Dockerfile  Makefile  README.md  deploy.yml  dune-project  myecho.opam
myecho/src/: dune  main.ml
